# haskell-experiments

./: .vimrc  Dockerfile  Makefile  experiments.cabal
src/: Main.hs
src/Examples/: Conway.hs
src/Examples/Equations/: Evaluator.hs  Parser.hs
src/Examples/Equations/Parser/: AST.hs
src/Experiments/: Conway.hs  HaskVM.hs  MonadDesugaring.hs  MyTree.hs  StateParser.hs
src/Experiments/Applicative/: CheapParser.hs  Introspection.hs
src/Experiments/Concurrency/: STMServer.hs  Simple.hs  SimpleSTM.hs
src/Experiments/Misc/: MergeTimePeriods.hs
src/Experiments/MonadT/: ErrorIO.hs  ExceptWriterStateT.hs  StateParser.hs
test/: Main.hs  Spec.hs
test/Tests/: Conway.hs  HaskVM.hs  MyTree.hs  StateParser.hs
test/Tests/Examples/: Conway.hs
test/Tests/Experiments/: HaskVM.hs  MyTree.hs  StateParser.hs
test/Tests/Experiments/MonadT/: ExceptWriterStateT.hs  StateParser.hs
test/Tests/MonadT/: StateParser.hs
