name:                experiments
version:             0.1.0.0
synopsis:            My Haskell Experiments
homepage:            www.rumblesan.com
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
build-type:          Simple
cabal-version:       >=1.10

executable experiments
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       containers,
                       mtl >=2.2,
                       network,
                       operational,
                       parsec,
                       regex-compat,
                       stm,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test,
                      src
  build-depends:      base,
                      containers,
                      HUnit,
                      mtl >=2.2,
                      operational,
                      parsec,
                      QuickCheck,
                      random,
                      regex-compat,
                      test-framework,
                      test-framework-hunit,
                      test-framework-quickcheck2,
                      transformers
