name:                experiments
version:             0.1.0.0
synopsis:            My Haskell Experiments
homepage:            www.rumblesan.com
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
build-type:          Simple
cabal-version:       >=1.10

executable experiments
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl,
                       network,
                       operational,
                       parsec,
                       regex-compat,
                       random,
                       stm,
                       transformers
  other-modules:       Examples.Conway,
                       Examples.Equations.Evaluator,
                       Examples.Equations.Parser,
                       Examples.Equations.Parser.AST,
                       Experiments.Applicative.CheapParser,
                       Experiments.Applicative.Introspection,
                       Experiments.Concurrency.STMServer,
                       Experiments.Concurrency.Simple,
                       Experiments.Concurrency.SimpleSTM,
                       Experiments.HaskVM,
                       Experiments.Misc.MergeTimePeriods,
                       Experiments.MonadT.ErrorIO,
                       Experiments.MonadT.StateParser,
                       Experiments.MyTree,
                       Experiments.StateParser
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test,
                      src
  build-depends:      base >= 4.7 && < 5
                      containers,
                      HUnit,
                      mtl,
                      operational,
                      parsec,
                      QuickCheck,
                      random,
                      regex-compat,
                      test-framework,
                      test-framework-hunit,
                      test-framework-quickcheck2,
                      transformers
  other-modules:       Examples.Conway,
                       Examples.Equations.Evaluator,
                       Examples.Equations.Parser,
                       Examples.Equations.Parser.AST,
                       Experiments.Applicative.CheapParser,
                       Experiments.Applicative.Introspection,
                       Experiments.Concurrency.STMServer,
                       Experiments.Concurrency.Simple,
                       Experiments.Concurrency.SimpleSTM,
                       Experiments.HaskVM,
                       Experiments.Misc.MergeTimePeriods,
                       Experiments.MonadT.ErrorIO,
                       Experiments.MonadT.StateParser,
                       Experiments.MyTree,
                       Experiments.StateParser
